--- a/04_mvc_mvt_y_servicios_web.ipynb
+++ b/04_mvc_mvt_y_servicios_web.ipynb
@@ -117,9 +117,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Interfaces de programación de aplicaciones (API).\n",
+    "### Interfaces de programación de aplicaciones (*API*).\n",
     "\n",
-    "Las API son un conjunto de endpoints que exponen diversas funcionalidades de un servicio web, las cuales pueden ser utilizadas para el desarrollo de aplicaciones web."
+    "Las *API* web son un conjunto de interfaces (endpoints) que exponen diversas funcionalidades de un servicio web, las cuales pueden ser utilizadas para el desarrollo de aplicaciones web."
    ]
   },
   {
@@ -130,18 +130,7 @@
     " \n",
     "Debido a la rápida evolución de herramientas y franeworks basados primordialmente en Javascript, se ha podido aprovechar al navegador como una plataforma para desarollo de aplicaciones. A este tipo de aplicaciones se les conoce como \"front-end\".\n",
     " \n",
-    "Las aplicaciones de front-end son capaces de consumir servicios web directamente desde el navegador enviando peticiones al servidor o \"back-end\" mediante el acceso a las API."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## *SOAP*.\n",
-    "\n",
-    "El *Protocolo de Acceso a Objetos Simples* ([*SOAP*](https://es.wikipedia.org/wiki/Simple_Object_Access_Protocol*SOAP*) por sus siglas en inglés) es un protocolo que define una arquitectura de servicios web basada principalment en [*AJAX*](https://es.wikipedia.org/wiki/AJAX).\n",
-    "\n",
-    "*SOAP* es "
+    "Las aplicaciones de front-end son capaces de consumir servicios web directamente desde el navegador enviando peticiones al servidor o \"back-end\" mediante el acceso a las *API*."
    ]
   },
   {
@@ -156,6 +145,26 @@
     "\n",
     "\n",
     "Referencia: https://www.restapitutorial.com/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## *SOAP*.\n",
+    "\n",
+    "El *Protocolo de Acceso a Objetos Simples* ([*SOAP*](https://es.wikipedia.org/wiki/Simple_Object_Access_Protocol*SOAP*) por sus siglas en inglés) es un protocolo que define una arquitectura de servicios web basada principalment en [*AJAX*](https://developer.mozilla.org/es/docs/Web/Guide/AJAX). Dicha especificación es publicada por la [*W3C*](https://www.w3.org/TR/soap/).\n",
+    "\n",
+    "El siguiente enlace apunta a un tutorial de *SOAP*:\n",
+    "\n",
+    "https://www.w3schools.com/XML/xml_soap.asp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Nota:** El alcance de este curso comprende el despliegue de servicios web simples basados en *REST*."
    ]
   },
   {
