--- a/05_urls_y_funciones_de_vista.ipynb
+++ b/05_urls_y_funciones_de_vista.ipynb
@@ -25,29 +25,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## *URLs* y funciones de vista.\n",
+    "## Los scripts ```urls.py```  y ```views.py```.\n",
     "\n",
-    "*Django* tiene la capacidad de identificar patrones específicos a partir de la *URL* a la que pretende acceder un cliente, de tal manera que puede crear una relación entre dicho patrón y una \"función de vista\".\n",
-    "\n",
-    "Una función de vista es aquella que recibe como primer argumento a un objeto ```request``` creado a partir de la petición enviada por un cliente y que a su vez regresa un objeto ```response``` al servidor de *Django* para que éste envié una respuesta al cliente que hizo la petición. \n",
-    "\n",
-    "Los objetos ```response```y ```request``` se estudiarán en capítulos próximos."
+    ". \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Los scripts ```urls.py```.\n",
+    "### Procesamiento de una petición en *Django*.\n",
     "\n",
-    "Los scripts ```urls.py``` permiten definir una serie de patrones de *URL* y relacionar cada patrón con una funcion de vista o con otro script de este mismo tipo."
+    "Cuando un cliente envía una petición a una *URL* apuntando a un servidor de *Django* ocurre lo siguiente:\n",
+    "\n",
+    "* El servidor de *Django* creará un objeto de tipo ```request```, el cual contiene todos los datos de la petición del cliente.\n",
+    "* La ruta de la petición debe de coincidir con patrón de ruta definido en algún script ```urls.py```.\n",
+    "* Cada patrón de ruta está ligado a una función de vista, la cual será ejecutada cuando una petición coincida con el patrón de ruta correspondiente.\n",
+    "* Las funciones de vista son definidas generalmente en los scripts ```views.py```, los cuales son importados como módulos por los scripts ```urls.py```.\n",
+    "* *Django* ejecutará una función de vista ingresando al objeto ```request``` como primer argumento de dicha función.\n",
+    "* La función de vista deberá de regresar un objeto ```response```, el cual será utilizado por el servidor de *Django* para transmitir una respuesta al cliente.\n",
+    "\n",
+    "**Nota:** Los objetos ```request``` y ```response``` serán estudiados en capítulos posteriores."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Configuración del script ```urls.py``` raíz de un proyecto.\n",
+    "## Configuración del script ```urls.py``` raíz de un proyecto.\n",
     "\n",
     "Un proyecto de *Django* debe de tener al menos un script ```urls.py``` a partir del cual es posible mapear todas las *URLs* de dicho poyecto y de sus aplicaciones. \n",
     "\n",
@@ -81,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Las siguiente celda regresará el valor de ```ROOT_URLCONF``` del proyecto ```tutorial```."
+    "* Las siguiente celda regresará el valor de ```ROOT_URLCONF``` del proyecto ```tutorial```, el cual corresponde al módulo ```'tutorial.urls'```."
    ]
   },
   {
@@ -97,7 +102,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* El script ```urls.py``` del proyecto ```tutorial``` se localiza en ```tutorial/tutorial/urls.py``` y fue generado automáicamente al crear el proyecto ```tutorial```. Su contenido es similar a:\n",
+    "* A continación se muestra el script ```tutorial/tutorial/urls.py```, el cual fue generado cuando se creó el proyecto ```tutorial```.\n",
+    "* Este script define al patrón de ruta ```'admin/'```, el cual es ligado a la función ```django.contrib.admin.site.urls```.\n",
     "\n",
     "``` python\n",
     "from django.contrib import admin\n",
@@ -106,7 +112,9 @@
     "urlpatterns = [\n",
     "    path('admin/', admin.site.urls),\n",
     "]\n",
-    "```"
+    "```\n",
+    "\n",
+    "**Nota:** *Django* ofrece la funcionalidad de desplegar un panel de administración mediante el paquete ```django.contrib.admin```. Dicho panel de administración se estudiará en capítulos posteriores."
    ]
   },
   {
@@ -131,18 +139,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### El objeto  ```urlpatterns``` de los scripts ```urls.py```.\n",
+    "## El objeto  ```urlpatterns``` de los scripts ```urls.py```.\n",
     "\n",
-    "El objeto ```urlpatterns``` define una lista de reglas para patrones de *URLs*\n",
+    "El objeto ```urlpatterns``` define una lista de reglas para patrones de ruta dentro de una *URL*.\n",
     "\n",
     "```\n",
-    "urlpattern  = [<regla 1>, <regla 2>... <regla 3>]\n",
+    "urlpattern  = [<regla 1>, <regla 2>... <regla n>]\n",
     "\n",
     "```\n",
     "\n",
     "Donde:\n",
     "\n",
-    "* ```<regla i>``` es una regla que relaciona a un patrón definido mediante un objeto del paquete ```django.urls``` y una función de vista.  "
+    "* ```<regla i>``` es una regla que relaciona a un patrón de ruta con una función de vista .  "
    ]
   },
   {
@@ -151,7 +159,9 @@
    "source": [
     "## El paquete ```django.urls```.\n",
     "\n",
-    "Este paquete contiene a las herramientas que permitirán identificar patrones de *URLs* específicas y ligarlas con  funciones de vista.\n",
+    "Este paquete contiene las herramientas que permitirán identificar patrones de ruta y ligarlos con  funciones de vista.\n",
+    "\n",
+    "La siguiente liga apunta a la documentación de referencian del paquete.\n",
     "\n",
     "https://docs.djangoproject.com/en/3.0/ref/urls/"
    ]
@@ -162,15 +172,15 @@
    "source": [
     "### La función ```django.urls.path()```.\n",
     "\n",
-    "Esta función permite relacionar a un patrón de *URL* a una función.\n",
+    "Esta función permite relacionar a un patrón de ruta dentro de un *URL* con una función.\n",
     "\n",
     "```\n",
     "django.urls.path('<patrón>', <función>, <kwargs>, name='<nombre>')\n",
     "```\n",
     "Donde:\n",
     "\n",
-    "* ```<patrón>``` corresponde a un patrón de *URL*.\n",
-    "* ```<función>``` corresponde a una función o  a un método de vista que será invocado. \n",
+    "* ```<patrón>``` corresponde a un patrón de ruta.\n",
+    "* ```<función>``` corresponde a una función de vista que será ejecutado. \n",
     "* ```<kwargs>``` corresponde a argumentos ```clave=valor```.\n",
     "* ```<nombre>``` es el nombre que se le dará a esta relación (opcional).\n"
    ]
@@ -181,74 +191,25 @@
    "source": [
     "### La función ```django.urls.include()```.\n",
     "\n",
-    "En los lenguajes de programación como en el caso de *C*, se utliza la palabra *include* cuando se desea importar algún módulo de forma similar a la palabra reservada de Python ```import```. \n",
+    "En los lenguajes de programación como en el caso de *C*, se utliza la palabra ```include``` cuando se desea importar algún módulo de forma similar a la palabra reservada de Python ```import```. \n",
     "\n",
-    "En este caso, la función ```django.urls.include()``` permite importar un script ```urls.py``` localizado en otro sitio del proyecto como si fuera un módulo.\n",
+    "En este caso, la función ```django.urls.include()``` permite referenciar a un script de tipo  ```urls.py``` localizado en otro sitio del proyecto, permitiendo acceder al objeto ```urlpatterns``` de dicho script, extendiendo de ese modo los patrones de ruta.\n",
     "\n",
     "``` python\n",
-    "django.urls.include('<patrón>', include('<módulo>')\n",
+    "django.urls.include('<patrón>', include('<script url>')\n",
     "```\n",
     "\n",
     "Donde:\n",
     "\n",
     "* ```<patrón>``` corresponde a un patrón de *URL*.\n",
-    "* ```<módulo>``` corresponde la localización de un módulo con la estructura de un script ```urls.py```. "
+    "* ```<script url>``` corresponde la localización de un un script ```urls.py``` en otro sitio del proyecto. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La aplicación de administación de *Django*.\n",
-    "\n",
-    "Django cuenta con una aplicación de administración de sitios llamada (```admin```) la cual se encuentra en el paquete ```django.contrib```."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### El paquete ```django.contrib```.\n",
-    "\n",
-    "El paquete ```django.contrib``` es una biblioteca que contiene herramientas de uso común en el desarrollo de proyectos basados en *Django*.\n",
-    "\n",
-    "Para mayores referencias sobre el paquete ```django.contrib```, se puede consultar la siguiente liga: \n",
-    "\n",
-    "https://docs.djangoproject.com/en/3.0/ref/contrib/"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### El paquete ```django.contrib.admin```.\n",
-    "\n",
-    "Este paquete contiene un conjunto de herramientas capaces de desplegar una aplicación de administración de un proyecto de *Django*.\n",
-    "\n",
-    "La documentación de este paquete puede ser consultada en https://docs.djangoproject.com/en/3.0/ref/contrib/admin/\n",
-    "\n",
-    "**Notas:**\n",
-    "* Aún cuando esta la aplicación de administración es habilitada automáticamente al momento en el que se crea un proyecto, puede ser un recurso opcional.\n",
-    "* La aplicación de administración requiere que se definan usuarios con los roles y permisos correspondientes. Ese tema se verá en capítulos posteriores."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* En entornos Linux y MacOS X."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Ejemplos:**"
+    "## Ejemplo de definiciones de patrones de ruta."
    ]
   },
   {
@@ -262,6 +223,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### El script ```tutorial/tutorial/urls.py```.\n",
+    "\n",
     "El script ```src/05/tutorial_urls.py``` contiene el siguiente código:\n",
     "\n",
     "``` python\n",
@@ -272,8 +235,8 @@
     "               path('main/', include('main.urls')),]\n",
     "```\n",
     "\n",
-    "* El primer elemento de ```urlpatterns``` relaciona al patron de  *URL* ```admin/``` con la función ```admin.site.urls()```.\n",
-    "* El segundo elemento de ```urlpatterns``` indica que es necesario importar el módulo ```main.urls``` para definir todas las *URLs* relativas a la ruta```main/```."
+    "* El primer elemento de ```urlpatterns``` relaciona al patron de ruta ```admin/``` con la función ```django.contrib.admin.site.urls()```.\n",
+    "* El segundo elemento de ```urlpatterns``` indica que los patrones de ruta a partir del patrón  ```main/``` serán definidos por el módulo ```main.urls```, el cual corresponde al script ```tutorial/main/urls.py``` ."
    ]
   },
   {
@@ -337,7 +300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Configuración del script ```tutorial/main/urls.py```.\n",
+    "### El script ```tutorial/main/urls.py```.\n",
     "\n",
     "En vista de que ```tutorial/tutorial/urls.py``` cargará como módulo el contenido de \n",
     "```tutorial/main/urls.py``` es necesario que el script de referencia exista.\n",
@@ -422,48 +385,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Funciones o métodos de vista.\n",
-    "\n",
-    "Una vez que un cliente envía una petición a una *URL* gestionada por el servidor de *Django* ocurre lo siguiente:\n",
-    "\n",
-    "* El servidor verifica que la *URL* coincida con alguno de los patrones definidos en los scripts ```urls.py```. \n",
-    "* En caso de que exista una coincidencia, ocurrirá lo siguiente:\n",
-    "    * El srrvidor creará un objeto ```request``` a partir de la petición.\n",
-    "    * El servidor  ejecutará la función de vista ligada al patron de *URL*, ingresando al objeto ```request``` como primer argumento. \n",
-    "    * La función de vista deberá de regresar un objeto ```response```. Dicho objeto será utilizado por el servidor para transmitir una respuesta al cliente que hizo la petición.\n",
-    "* En caso de que no existiera un patrón que coincida con la *URL* de la petición, se gestionará un código de estado ```404```."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Las"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Los scripts ```views.py```.\n",
-    "\n",
-    "Los scripts ```views.py```, los cuales contienen a las funciones de vista que gestionarán las peticiones hechas a las *URLs* a las que están ligadas."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Ejemplo:**\n",
+    "### El script ```tutorial/main/views.py```.\n",
     "\n",
     "El script ```tutorial/main/views.py``` es referido como un módulo en el script ```tutorial/main/urls.py```.\n",
     "\n",
@@ -593,6 +515,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### El paquete ```django.contrib.admin```.\n",
+    "\n",
+    "Este paquete contiene un conjunto de herramientas capaces de desplegar una aplicación de administración de un proyecto de *Django*.\n",
+    "\n",
+    "La documentación de este paquete puede ser consultada en https://docs.djangoproject.com/en/3.0/ref/contrib/admin/\n",
+    "\n",
+    "**Notas:**\n",
+    "* Aún cuando esta la aplicación de administración es habilitada automáticamente al momento en el que se crea un proyecto, puede ser un recurso opcional.\n",
+    "* La aplicación de administración requiere que se definan usuarios con los roles y permisos correspondientes. Ese tema se verá en capítulos posteriores."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* En entornos Linux y MacOS X."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Arranque desde una terminal.\n",
     "\n",
     "* Desde una terminal diríjase al directorio ```tutorial```, en el cual se encuentra el script ```manage.py```.\n",
@@ -659,7 +608,7 @@
    "metadata": {},
    "source": [
     "<p style=\"text-align: center\"><a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\"><img alt=\"Licencia Creative Commons\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by/4.0/80x15.png\" /></a><br />Esta obra está bajo una <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\">Licencia Creative Commons Atribución 4.0 Internacional</a>.</p>\n",
-    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2019.</p>"
+    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2020.</p>"
    ]
   }
  ],
