--- a/12_configuracion_de_bases_de_datos.ipynb
+++ b/12_configuracion_de_bases_de_datos.ipynb
@@ -205,12 +205,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install PyMySQL configparser"
+    "! sudo apt-get install libmysqlclient-dev -y"
    ]
   },
   {
@@ -219,16 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! sudo apt-get install python3-mysqldb libmysqlclient-dev -y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install mysql-connector-python django-mysql pymysql MySQL-python"
+    "!pip install mysqlclient"
    ]
   },
   {
@@ -282,11 +271,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cp src/11/settings.py tutorial/tutorial/settings.py"
+    "!cp src/12/settings.py tutorial/tutorial/settings.py"
    ]
   },
   {
@@ -302,7 +291,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!copy src\\11\\settings.py tutorial\\tutorial\\settings.py"
+    "!cd .."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!copy src\\12\\settings.py tutorial\\tutorial\\settings.py"
    ]
   },
   {
@@ -344,29 +342,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/opt/oi/py201/tutorial\n"
+     ]
+    }
+   ],
    "source": [
     "%cd tutorial"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36;1mOperations to perform:\u001b[0m\n",
+      "\u001b[1m  Apply all migrations: \u001b[0madmin, api, auth, contenttypes, main, sessions\n",
+      "\u001b[36;1mRunning migrations:\u001b[0m\n",
+      "  No migrations to apply.\n"
+     ]
+    }
+   ],
    "source": [
     "!python manage.py migrate --database=default"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36;1mOperations to perform:\u001b[0m\n",
+      "\u001b[1m  Apply all migrations: \u001b[0madmin, api, auth, contenttypes, main, sessions\n",
+      "\u001b[36;1mRunning migrations:\u001b[0m\n",
+      "  Applying contenttypes.0001_initial...\u001b[32;1m OK\u001b[0m\n",
+      "  Applying auth.0001_initial...\u001b[32;1m OK\u001b[0m\n",
+      "  Applying admin.0001_initial...\u001b[32;1m OK\u001b[0m\n",
+      "  Applying admin.0002_logentry_remove_auto_add...\u001b[32;1m OK\u001b[0m\n",
+      "  Applying admin.0003_logentry_add_action_flag_choices...\u001b[32;1m OK\u001b[0m\n",
+      "  Applying api.0001_initial...\u001b[32;1m OK\u001b[0m\n",
+      "  Applying contenttypes.0002_remove_content_type_name...\u001b[32;1m OK\u001b[0m\n",
+      "  Applying auth.0002_alter_permission_name_max_length...\u001b[32;1m OK\u001b[0m\n",
+      "  Applying auth.0003_alter_user_email_max_length...\u001b[32;1m OK\u001b[0m\n",
+      "  Applying auth.0004_alter_user_username_opts...\u001b[32;1m OK\u001b[0m\n",
+      "  Applying auth.0005_alter_user_last_login_null...\u001b[32;1m OK\u001b[0m\n",
+      "  Applying auth.0006_require_contenttypes_0002...\u001b[32;1m OK\u001b[0m\n",
+      "  Applying auth.0007_alter_validators_add_error_messages...\u001b[32;1m OK\u001b[0m\n",
+      "  Applying auth.0008_alter_user_username_max_length...\u001b[32;1m OK\u001b[0m\n",
+      "  Applying auth.0009_alter_user_last_name_max_length...\u001b[32;1m OK\u001b[0m\n",
+      "  Applying auth.0010_alter_group_name_max_length...\u001b[32;1m OK\u001b[0m\n",
+      "  Applying auth.0011_update_proxy_permissions...\u001b[32;1m OK\u001b[0m\n",
+      "  Applying main.0001_initial...\u001b[32;1m OK\u001b[0m\n",
+      "  Applying sessions.0001_initial...\u001b[32;1m OK\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "!python manage.py migrate --database=pythonista"
    ]
