--- a/19_contenido_estatico.ipynb
+++ b/19_contenido_estatico.ipynb
@@ -109,7 +109,7 @@
     "Esta instrucción ejecutada en el directorio del proyecto, recolectará los archivos estáticos de las aplicaciones y los guardará en el directorio indicado en la configuración.\n",
     "\n",
     "```\n",
-    "./manage.py collectstatic <argumentos>\n",
+    "python manage.py collectstatic <argumentos>\n",
     "```\n",
     "\n",
     "Al ejecutarse el comando, se realizará una búsqueda en todos los subdirectorios de proyecto y se pedirá una confirmación de la escritura de archivo.\n",
@@ -127,7 +127,7 @@
     "\n",
     "La variable ```settings.DEBUG``` define el comportamiento de *Django* en varios aspectos, incluyendo la forma en la que guarda los recursos estáticos.\n",
     "\n",
-    "Cuando el valor de ```settings.DEBUG``` es ```True```, Django buscará automáticamente en el subdirectorio ```static/``` de cada aplicación en el proyecto y no es necesario tener un directorio único de dfindo por ```settings.STATIC_ROOT```."
+    "Cuando el valor de ```settings.DEBUG``` es ```True```, Django buscará automáticamente en el subdirectorio ```static/``` de cada aplicación en el proyecto y no es necesario tener un directorio único de defindo por ```settings.STATIC_ROOT```."
    ]
   },
   {
@@ -505,6 +505,15 @@
    "outputs": [],
    "source": [
     "!cp -r src/19/imagenes tutorial/api/static/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! ls tutorial/api/static/imagenes/"
    ]
   },
   {
