--- a/21_seguridad_y_autenticacion_basicas.ipynb
+++ b/21_seguridad_y_autenticacion_basicas.ipynb
@@ -179,7 +179,7 @@
     "Para poder crear unsuperuisuario se utiliza el siguiente comando desde una terminal localziada en el directorio del proyecto.\n",
     "\n",
     "```\n",
-    "python3 manage.py createsuperuser --email=\"<correo electronico>\" --user=\"<usuario>\"\n",
+    "python manage.py createsuperuser --email=\"<correo electronico>\" --user=\"<usuario>\"\n",
     "```"
    ]
   },
@@ -189,7 +189,7 @@
    "source": [
     "**Ejemplo:**\n",
     "```\n",
-    "python3 manage.py createsuperuser --email=\"falso@pythonista.io\" --user=\"admin\"\n",
+    "python manage.py createsuperuser --email=\"falso@pythonista.io\" --user=\"admin\"\n",
     "```"
    ]
   },
@@ -223,7 +223,7 @@
     "* ```'logout/'``` salida de la sesión de un usuario.\n",
     "* ```'password_change/'```, la cual permite cambiar la contraseña de un usuario.\n",
     "* ```'password_reset/'```, la cual permite recuperar una contraseña.\n",
-    "* ```'reset/<uid64>/<token>'```, el cual perimite reiniciar a un usuario.\n",
+    "* ```'reset/<uid64>/<token>'```, el cual permite reiniciar a un usuario.\n",
     "* ```'password_change/done/'```.\n",
     "* ```'password_reset/done/'```.\n",
     "* ```'reset/done/'```.\n",
