--- a/24_despliegue_en_un_servidor_lamp.ipynb
+++ b/24_despliegue_en_un_servidor_lamp.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install requests django mysql-connector-python ipython-sql"
+    "!pip install requests django mysqlclient ipython-sql"
    ]
   },
   {
@@ -46,15 +46,6 @@
    "outputs": [],
    "source": [
     "!sudo mkdir /opt/django"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "man unzip"
    ]
   },
   {
@@ -317,7 +308,7 @@
     "\n",
     "\n",
     "``` python\n",
-    "DATABASES = {'default': {'ENGINE': 'mysql.connector.django',\n",
+    "DATABASES = {'default': {'ENGINE': 'django.backends.mysql',\n",
     "                           'NAME': 'db_django',\n",
     "                           'USER': 'root',\n",
     "                           'PASSWORD': '0p3n5t4ck',\n",
@@ -438,7 +429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
