--- a/20_gestion_de_formularios.ipynb
+++ b/20_gestion_de_formularios.ipynb
@@ -156,7 +156,7 @@
     "\n",
     "https://docs.djangoproject.com/en/3.0/ref/forms/fields/#built-in-field-classes\n",
     "\n",
-    "Cada uno de los campos tiene un \"widget por defecto\". "
+    "Cada uno de los campos tiene un \"widget\" definido por defecto. "
    ]
   },
   {
@@ -214,7 +214,7 @@
     "    ...\n",
     "```\n",
     "\n",
-    "Para conocer el listado de validaddores disponibles puede consultar la siguiente liga:\n",
+    "Para conocer el listado de validadores disponibles puede consultar la siguiente liga:\n",
     "\n",
     "https://docs.djangoproject.com/en/3.0/ref/validators/#built-in-validators\n",
     "\n",
@@ -232,7 +232,7 @@
     "\n",
     "#### El método ```is_valid()```.\n",
     "\n",
-    " Este método evalúa si los datos ingresados en un objeto forma son v;alidos."
+    " Este método evalúa si los datos ingresados en un objeto forma son válidos."
    ]
   },
   {
@@ -264,7 +264,7 @@
     "\n",
     "### El atributo ```csrfmiddlewaretoken```.\n",
     "\n",
-    "Cuando se incluye ```{% csrf_token %}``` en un formulario, se crea un elemento ```<input>``` que es invisible al usuario, el caual tiene como nombre de atributo ```csrfmiddlewaretoken ```.\n",
+    "Cuando se incluye ```{% csrf_token %}``` en un formulario, se crea un elemento ```<input>``` que es invisible al usuario, el cual tiene como nombre de atributo ```csrfmiddlewaretoken ```.\n",
     "\n",
     "\n",
     "https://docs.djangoproject.com/en/3.0/ref/csrf/"
@@ -300,7 +300,7 @@
     "\n",
     "\n",
     "```\n",
-    "render(request, '<plantilla>', context=<contexto>)\n",
+    "render(request, '<plantilla>', <contexto>)\n",
     "```"
    ]
   },
