--- a/08_json_con_django.ipynb
+++ b/08_json_con_django.ipynb
@@ -450,7 +450,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/08/urls.py tutorial/main/urls.py"
+    "!cp src/08/urls.py tutorial/main/urls.py"
    ]
   },
   {
@@ -466,7 +466,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%copy src\\08\\urls.py tutorial\\main\\urls.py"
+    "!copy src\\08\\urls.py tutorial\\main\\urls.py"
    ]
   },
   {
@@ -512,7 +512,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/08/views.py tutorial/main/views.py"
+    "!cp src/08/views.py tutorial/main/views.py"
    ]
   },
   {
@@ -528,7 +528,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%copy src\\08\\views.py tutorial\\main\\views.py"
+    "!copy src\\08\\views.py tutorial\\main\\views.py"
    ]
   },
   {
@@ -553,7 +553,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cd tutorial"
+    "!cd tutorial"
    ]
   },
   {
@@ -564,7 +564,7 @@
     "\n",
     "* Al ejecutar la siguiente celda el servidor se inciará desde la notebook, por lo que para ejecutar cualquier otra celda es necesario interrumpir la ejecución del kernel.\n",
     "\n",
-    "* Asegúrese que no haya otro servicio escuchando en el puerto *5000*."
+    "* Asegúrese que no haya otro servicio escuchando en el puerto ```8000```."
    ]
   },
   {
@@ -575,7 +575,7 @@
    },
    "outputs": [],
    "source": [
-    "!python manage.py runserver 0.0.0.0:5000"
+    "!python manage.py runserver 0.0.0.0:8000"
    ]
   },
   {
@@ -592,7 +592,7 @@
    "metadata": {},
    "source": [
     "<p style=\"text-align: center\"><a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\"><img alt=\"Licencia Creative Commons\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by/4.0/80x15.png\" /></a><br />Esta obra está bajo una <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\">Licencia Creative Commons Atribución 4.0 Internacional</a>.</p>\n",
-    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2019.</p>"
+    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2020.</p>"
    ]
   }
  ],
