--- a/12_configuracion_de_bases_de_datos.ipynb
+++ b/12_configuracion_de_bases_de_datos.ipynb
@@ -148,7 +148,7 @@
     "\n",
     "Los parámetros que definen la conexión de una base de datos pueden ser consultados en la siguiente liga:\n",
     "\n",
-    "https://docs.djangoproject.com/en/2.2/ref/settings/#databases\n",
+    "https://docs.djangoproject.com/en/3.0/ref/settings/#databases\n",
     "\n",
     "Los parámetros más comunes son los siguientes:\n",
     "\n",
@@ -196,13 +196,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "En vista de que el conector de Django no funciona correctamente con Python 3, se utilizará [*mysql.connector*](https://www.mysql.com/products/connector/) como *engine*."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -229,7 +222,10 @@
     "* Usuario: ```root```\n",
     "* Contraseña: ```0p3n5t4ck```\n",
     "* Host: ```localhost``` accesible exclusivamente desde la máquina virtual.\n",
-    "* Puerto: ```3306```"
+    "* Puerto: ```3306```\n",
+    "* Nombre de la base de datos: ```db_django```\n",
+    "\n",
+    "**Nota:** Es necesario crear previamente la base ```db_django``` en *MySQL*."
    ]
   },
   {
@@ -238,14 +234,13 @@
    "source": [
     "### Configuración de ```settings.DATABASES```.\n",
     "\n",
-    "El script ```src/11/settings.py``` contiene la siguiente configuración que define una conexión al gestor de bases de datos *MySQL* con clave ```'default'```.\n",
+    "El script ```src/12/settings.py``` contiene la siguiente configuración que define una conexión al gestor de bases de datos *MySQL* con clave ```'default'```.\n",
     "\n",
     "``` python\n",
     "\n",
     "DATABASES = {'default': {'ENGINE': 'django.db.backends.sqlite3',\n",
     "                         'NAME': os.path.join(BASE_DIR, 'db.sqlite3')},\n",
-    "            'pythonista': {'ENGINE': 'mysql-connector-django',\n",
-    "                           'NAME': 'db_django',\n",
+    "            'pythonista': {'ENGINE': 'django.db.backends.mysql',\n",
     "                           'USER': 'root',\n",
     "                           'PASSWORD': '0p3n5t4ck',\n",
     "                           'HOST': 'localhost',\n",
@@ -259,7 +254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda sustituirá al archivo ```tutorial/tutorial/settings.py``` con el archivo ```src/11/settings.py```."
+    "* La siguiente celda sustituirá al archivo ```tutorial/tutorial/settings.py``` con el archivo ```src/12/settings.py```."
    ]
   },
   {
@@ -271,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,15 +278,6 @@
    "metadata": {},
    "source": [
     "* Para la plataforma Windows."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!cd .."
    ]
   },
   {
@@ -342,77 +328,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/opt/oi/py201/tutorial\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%cd tutorial"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[36;1mOperations to perform:\u001b[0m\n",
-      "\u001b[1m  Apply all migrations: \u001b[0madmin, api, auth, contenttypes, main, sessions\n",
-      "\u001b[36;1mRunning migrations:\u001b[0m\n",
-      "  No migrations to apply.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!python manage.py migrate --database=default"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[36;1mOperations to perform:\u001b[0m\n",
-      "\u001b[1m  Apply all migrations: \u001b[0madmin, api, auth, contenttypes, main, sessions\n",
-      "\u001b[36;1mRunning migrations:\u001b[0m\n",
-      "  Applying contenttypes.0001_initial...\u001b[32;1m OK\u001b[0m\n",
-      "  Applying auth.0001_initial...\u001b[32;1m OK\u001b[0m\n",
-      "  Applying admin.0001_initial...\u001b[32;1m OK\u001b[0m\n",
-      "  Applying admin.0002_logentry_remove_auto_add...\u001b[32;1m OK\u001b[0m\n",
-      "  Applying admin.0003_logentry_add_action_flag_choices...\u001b[32;1m OK\u001b[0m\n",
-      "  Applying api.0001_initial...\u001b[32;1m OK\u001b[0m\n",
-      "  Applying contenttypes.0002_remove_content_type_name...\u001b[32;1m OK\u001b[0m\n",
-      "  Applying auth.0002_alter_permission_name_max_length...\u001b[32;1m OK\u001b[0m\n",
-      "  Applying auth.0003_alter_user_email_max_length...\u001b[32;1m OK\u001b[0m\n",
-      "  Applying auth.0004_alter_user_username_opts...\u001b[32;1m OK\u001b[0m\n",
-      "  Applying auth.0005_alter_user_last_login_null...\u001b[32;1m OK\u001b[0m\n",
-      "  Applying auth.0006_require_contenttypes_0002...\u001b[32;1m OK\u001b[0m\n",
-      "  Applying auth.0007_alter_validators_add_error_messages...\u001b[32;1m OK\u001b[0m\n",
-      "  Applying auth.0008_alter_user_username_max_length...\u001b[32;1m OK\u001b[0m\n",
-      "  Applying auth.0009_alter_user_last_name_max_length...\u001b[32;1m OK\u001b[0m\n",
-      "  Applying auth.0010_alter_group_name_max_length...\u001b[32;1m OK\u001b[0m\n",
-      "  Applying auth.0011_update_proxy_permissions...\u001b[32;1m OK\u001b[0m\n",
-      "  Applying main.0001_initial...\u001b[32;1m OK\u001b[0m\n",
-      "  Applying sessions.0001_initial...\u001b[32;1m OK\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!python manage.py migrate --database=pythonista"
    ]
@@ -448,7 +386,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! pip install ipython-sql"
+    "! pip install ipython-sql mysql-connector"
    ]
   },
   {
@@ -497,6 +435,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%sql SHOW TABLES FROM db_django;"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -529,7 +476,7 @@
    "metadata": {},
    "source": [
     "<p style=\"text-align: center\"><a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\"><img alt=\"Licencia Creative Commons\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by/4.0/80x15.png\" /></a><br />Esta obra está bajo una <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\">Licencia Creative Commons Atribución 4.0 Internacional</a>.</p>\n",
-    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2019.</p>"
+    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2020.</p>"
    ]
   }
  ],
