--- a/19_contenido_estatico.ipynb
+++ b/19_contenido_estatico.ipynb
@@ -454,6 +454,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cp -r src/19/js tutorial/api/static/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ls tutorial/api/static/"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -485,6 +503,15 @@
    "outputs": [],
    "source": [
     "!copy src\\19\\js tutorial\\api\\static\\"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!dir tutorial\\api\\static\\"
    ]
   },
   {
