--- a/22_aplicaciones_autenticadas.ipynb
+++ b/22_aplicaciones_autenticadas.ipynb
@@ -50,7 +50,7 @@
     "from .models import Alumno\n",
     "from .forms import FormaAlumno\n",
     "from django.http import HttpResponseRedirect, HttpResponse, JsonResponse\n",
-    "from django.shortcuts import render, render_to_response\n",
+    "from django.shortcuts import render\n",
     "from requests import post\n",
     "from django.contrib.auth.decorators  import login_required \n",
     "\n",
@@ -60,13 +60,13 @@
     "@login_required\n",
     "def vista(request):\n",
     "    lista = [[(campo, getattr(alumno, campo)) for campo in campos] for alumno in Alumno.objects.all()]\n",
-    "    return render_to_response('listado.html',{'lista': lista}) \n",
+    "        return render(request, 'listado.html',{'lista': lista}) \n",
     "\n",
     "\n",
     "@login_required\n",
     "def valida(request):\n",
     "    lista = [[getattr(alumno, campo) for campo in campos] for alumno in Alumno.objects.all()]\n",
-    "    return render_to_response('valida.html',{'lista': lista}) \n",
+    "    return render(request,'valida.html',{'lista': lista}) \n",
     "\n",
     "\n",
     "@login_required\n",
