--- a/24_despliegue_en_un_servidor_lamp.ipynb
+++ b/24_despliegue_en_un_servidor_lamp.ipynb
@@ -29,6 +29,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!sudo apt install mysqlclient"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "!pip install requests django mysqlclient ipython-sql"
    ]
   },
