--- a/14_creacion_de_una_api_rest.ipynb
+++ b/14_creacion_de_una_api_rest.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "En este capítulo se estudiarán los métodos más simples de operación de modelos en una base de datos. \n",
     "\n",
-    "https://docs.djangoproject.com/en/2.2/topics/db/queries/"
+    "https://docs.djangoproject.com/en/3.0/topics/db/queries/"
    ]
   },
   {
@@ -702,15 +702,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cd .."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "%load_ext sql"
    ]
   },
@@ -720,7 +711,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%sql sqlite:///tutorial/db.sqlite3"
+    "%sql sqlite:///db.sqlite3"
    ]
   },
   {
@@ -744,7 +735,7 @@
    "metadata": {},
    "source": [
     "<p style=\"text-align: center\"><a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\"><img alt=\"Licencia Creative Commons\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by/4.0/80x15.png\" /></a><br />Esta obra está bajo una <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\">Licencia Creative Commons Atribución 4.0 Internacional</a>.</p>\n",
-    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2019.</p>"
+    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2020.</p>"
    ]
   }
  ],
